# daemons

./: .gitmodules
chatd/: .vimrc.local  CMakeLists.txt  chatd.cfg  chatd.cpp  chatd_service  configure.h  documentation.txt  friendsoft.ru  install.sh  processor.cpp  processor.h  service.cpp  service.h  stat_daemon.cpp  unit_tests.cpp
chatd/commands/: changed_nickname.cpp  changed_nickname.h  client.cpp  client.h  come_in.cpp  come_in.h  come_out.cpp  come_out.h  create_channel.cpp  create_channel.h  create_user.cpp  create_user.h  event.cpp  event.h  found_user.cpp  found_user.h  get_history.cpp  get_history.h  get_status.cpp  get_status.h  get_user_list.cpp  get_user_list.h  inside.cpp  inside.h  login.cpp  login.h  logout.cpp  logout.h  look_for_channel.cpp  look_for_channel.h  look_for_user.cpp  look_for_user.h  password_hash.cpp  password_hash.h  ping.cpp  ping.h  pong.cpp  pong.h  remove_login.cpp  remove_login.h  (+6 more)
chatd/objects/: channel.cpp  channel.h  channel_user.cpp  channel_user.h  message.cpp  message.h  user.cpp  user.h
chatd/swarm/: swarm.cpp  swarm.h  table.h
chatd/test/: auth_test.py  chatd.cfg  event_test.py  history_test.py  look_test.py  ping_test.py  some_test.py
useful_files/: bash_profile  screenrc  vimrc
